--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          run: go test ./...
+          go-version: "1.25.1"
 
-      - name: Force Failure
-        run: go version
+      - name: Test code
+        run: go test ./...
