--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,3 +20,14 @@ jobs:
 
       - name: Build production app
         run: ./scripts/buildprod.sh
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v3'
+
+      - name: 'Build Docker image'
+        run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/project-afe695fe-cf4f-4ccd-a6d/notely-ar-repo/notely:latest .'
